--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@ title: Home
 ================================================== -->    
 <section class="intro">
     <div class="wrapintro">
-        <h1>Jekyll Theme for Marketers</h1>
-        <h2 class="lead">"Affiliates" is a Jekyll theme designed & developed by WowThemesNet, best suitable for affiliate marketing.</h2>    
+        <h1>Learn How to Build a Website</h1>
+        <h2 class="lead">"With Free Domain and Free Hosting in 10 Minutes!</h2>    
         <a target="_blank" href="https://gum.co/affiliates-jekyll-template" class="btn">Download</a>
     </div>
 </section>
