--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ title: Home
 <section class="intro">
     <div class="wrapintro">
         <h1>Learn How to Build a Website</h1>
-        <h2 class="lead">With a Free Domain and Free Hosting in 10 Minutes! Your site will be fast, reliable, secure and choose from many beautiful themes.</h2>    
+        <h2 class="lead">With a Free Domain and Free Hosting in 10 Minutes! Your site will be fast, reliable and secure. Choose from many beautiful themes.</h2>    
         <a target="_blank" href="https://gum.co/affiliates-jekyll-template" class="btn">Download</a>
     </div>
 </section>
