--- a/contact.html
+++ b/contact.html
@@ -1,6 +1,7 @@
 ---
 layout: page
 title: Contact
+meta_description: Contact StaticWebExperts
 ---
 
 <form action="https://formspree.io/{{site.email}}" method="POST">
